# embedded-io

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ci.sh  rust-toolchain.toml
.github/workflows/: rust.yml
src/: async_.rs  asynch.rs  blocking.rs  lib.rs
src/adapters/: futures_io.rs  mod.rs  std_io.rs  tokio.rs
