[package]
name = "embedded-io"
version = "0.1.0"
edition = "2021"
description = "Embedded IO traits"
repository = "https://github.com/embassy-rs/embedded-io"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]

[features]
async = ["dep:futures"]
std = ["futures?/std"]

[dependencies]
defmt = { version = "0.3", optional = true }
futures = { version = "0.3.21", default-features = false, optional = true }
log = { version = "0.4.14", optional = true }

[package.metadata.docs.rs]
features = ["std", "async", "defmt"]
rustdoc-args = ["--cfg", "docsrs"]
